# physics-engine

./: CMakeLists.txt
app/: main.cpp
include/: CollisionManager.hpp  Config.hpp  Engine.hpp  Renderer.hpp  RigidBody.hpp  Utils.hpp  World.hpp
lib_ecs/include/: Component.hpp  Config.hpp  ECSEngine.hpp  EntityManager.hpp  Renderers.hpp  System.hpp  Utils.hpp
lib_ecs/src/: ECSEngine.cpp  Renderers.cpp  System.cpp
lib_oop/include/: CollisionManager.hpp  Config.hpp  ObjectEngine.hpp  Renderer.hpp  RigidBody.hpp  Utils.hpp  World.hpp
lib_oop/src/: CollisionManager.cpp  ObjectEngine.cpp  Renderer.cpp  RigidBody.cpp  World.cpp
src/: CollisionManager.cpp  Engine.cpp  Renderer.cpp  RigidBody.cpp  World.cpp
